--- a/src/views/sobre.ejs
+++ b/src/views/sobre.ejs
@@ -4,26 +4,48 @@
     <section class="banner">
       <div class="about-banner-img">
         <div class="about-div-title">
-          <p class="about-title">Somos a rede social da sua Bike!</p>
+          <img src="/public/assets/" alt="">
+          <p class="about-title">
+            "Estamos aqui para te auxiliar a ter a melhor experiência no seu home office!"
+          </p>          
         </div>
       </div>
     </section>
-    <section class="conteudo">
-
+    <section>
+      <div class="infos-externas">        
+          <div class="container-infos">
+            <img src="/public/assets/SOBRE.jpg" alt="">
+            <p class="text-info-externas">
+              Segundo o IBGE, no ano de 2018, 3.8 milhões de pessoas já trabalhavam em 
+              regime de teletrabalho e por conta da pandemia do Coronavírus que assolou 
+              o planeta, estima-se que atualmente no Brasil, pelo menos 8.2 milhões de
+              pessoas (11% do total de trabalhadores) aderiram a esse modelo de trabalho.
+              <br><br>
+              Diante desse crescente cenário, nasceu o Meu Home Office.
+              <br><br>
+              Acreditamos na diversidade cultural e de experiências que o trabalho remoto traz 
+              para as empresas que cada vez mais estão migrando para esse regime, para tanto, 
+              pensando em proporcionar a melhor experiência no trabalho em casa, oferecemos 
+              acessórios que irão facilitar o seu dia a dia e aumentar a sua produtividade 
+              com conforto e excelência.
+            </p>
+          </div> 
+      </div>
+    </section>
+    <section class="conteudo">      
       <div class="sobre-conteudo-section">
         <div class="container">
-          <div class="items">
+          <div class="items">            
             <h2>Missão:</h2>
             <p>
-              Ajudar as pessoas a desenvolver os bons hábitos de uma vida mais saudável através do ciclismo.
+              Ajudar as pessoas a melhorar seu ambiente de trabalho Home office, e que
+              dessa forma possa assim desenvolver bem seu trabalho.
             </p>
-
-
           </div>
         </div>
       </div>
 
-      <div class="sobre-conteudo-section">
+      <!--<div class="sobre-conteudo-section">
         <div class="container">
           <div class="items">
             <h2>Visão:</h2>
@@ -31,11 +53,9 @@
               Proporcionar através das redes sociais que as pessoas interajam sobre o tema de ciclismo, conectando
               o virtual com a prática do ciclismo.
             </p>
-
-
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="sobre-conteudo-section">
         <div class="container">
@@ -49,13 +69,9 @@
               <li>Respeito</li>
               <li>Humildade</li>
             </ul>
-
           </div>
         </div>
       </div>
-
-
-
 
       <div class="sobre-conteudo-section">
         <div class="container">
