--- a/src/views/sobre.ejs
+++ b/src/views/sobre.ejs
@@ -1,116 +1,103 @@
 <%- include('./partials/header') %>
 
   <main class="">
-    <section class="banner">
-      <div class="about-banner-img">
-        <div class="about-div-title">
-          <img src="/public/assets/" alt="">
-          <p class="about-title">
-            "Estamos aqui para te auxiliar a ter a melhor experiência no seu home office!"
-          </p>          
-        </div>
-      </div>
-    </section>
+    
     <section>
-      <div class="infos-externas">        
+      <div class='sobre-conteudo-section'>
+        <div class="info-wrapper">        
           <div class="container-infos">
-            <img src="/public/assets/SOBRE.jpg" alt="">
-            <p class="text-info-externas">
+            <h2 class="section-about-title">Estamos aqui para te auxiliar a ter a melhor experiência no seu home office!</h2>
+            <h4 class="text-info-externas">
               Segundo o IBGE, no ano de 2018, 3.8 milhões de pessoas já trabalhavam em 
               regime de teletrabalho e por conta da pandemia do Coronavírus que assolou 
               o planeta, estima-se que atualmente no Brasil, pelo menos 8.2 milhões de
               pessoas (11% do total de trabalhadores) aderiram a esse modelo de trabalho.
-              <br><br>
-              Diante desse crescente cenário, nasceu o Meu Home Office.
-              <br><br>
-              Acreditamos na diversidade cultural e de experiências que o trabalho remoto traz 
-              para as empresas que cada vez mais estão migrando para esse regime, para tanto, 
-              pensando em proporcionar a melhor experiência no trabalho em casa, oferecemos 
-              acessórios que irão facilitar o seu dia a dia e aumentar a sua produtividade 
-              com conforto e excelência.
-            </p>
+            </h4>
+
           </div> 
       </div>
-    </section>
-    <section class="conteudo">      
-      <div class="sobre-conteudo-section">
-        <div class="container">
-          <div class="items">            
-            <h2>Missão:</h2>
-            <p>
-              Ajudar as pessoas a melhorar seu ambiente de trabalho Home office, e que
-              dessa forma possa assim desenvolver bem seu trabalho.
-            </p>
-          </div>
-        </div>
       </div>
 
-      <!--<div class="sobre-conteudo-section">
-        <div class="container">
-          <div class="items">
-            <h2>Visão:</h2>
-            <p>
-              Proporcionar através das redes sociais que as pessoas interajam sobre o tema de ciclismo, conectando
-              o virtual com a prática do ciclismo.
-            </p>
-          </div>
-        </div>
-      </div> -->
 
-      <div class="sobre-conteudo-section">
-        <div class="container">
-          <div class="items">
-            <h2>Valores:</h2>
-            <ul>
-              <li>Comprometimento</li>
-              <li>Honestidade</li>
-              <li>Inovação</li>
-              <li>Paixão por realizar</li>
-              <li>Respeito</li>
-              <li>Humildade</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="sobre-conteudo-section">
-        <div class="container">
-          <h2>Quem somos</h2>
-          <div class="row sobre-equipe-grid">
-            <div class="col-md-3 sobre-equipe-card">
-              <img src="https://github.com/danielbrazrocha.png" class="about-profile-pic img-fluid"
-                alt="Daniel Rocha" />
-              <a href="https://github.com/danielbrazrocha">
-                <h4>Daniel Rocha</h4>
-              </a>
-              <p>Desenvolvedor FullStack</p>
-            </div>
+      
+      <div class='sobre-conteudo-section'>
+        <div class="info-wrapper">        
+          <div class="container-infos">
             
-            <div class="col-md-3 sobre-equipe-card">
-              <img src="https://github.com/rafarano.png" class="about-profile-pic img-fluid" alt="Rafael Alves" />
-              <a href="https://github.com/agabitoledo">
-                <h4>Rafael Alves</h4>
-              </a>
-              <p>Desenvolvedor FullStack</p>
-            </div>
-            <div class="col-md-3 sobre-equipe-card">
-              <img src="https://github.com/iAmRapha.png" class="about-profile-pic img-fluid" alt="Raphael Gonçalves" />
-              <a href="https://github.com/agabitoledo">
-                <h4>Raphael Gonçalves</h4>
-              </a>
-              <p>Desenvolvedor FullStack</p>
-            </div>
-          </div>
+            <img src="/assets/SOBRE.jpg" class='img-fluid' alt="Imagem do home office">
+            
+          </div> 
+      </div>
+      </div>
+
+      <div class='sobre-conteudo-section'>
+        <div class="info-wrapper">
+          <h4 class="text-info-externas">
+            Diante desse crescente cenário, nasceu o Meu Home Office.
+          </h4>
+          <h4 class="text-info-externas">              
+            Acreditamos na diversidade cultural e de experiências que o trabalho remoto traz 
+            para as empresas que cada vez mais estão migrando para esse regime, para tanto, 
+            pensando em proporcionar a melhor experiência no trabalho em casa, oferecemos 
+            acessórios que irão facilitar o seu dia a dia e aumentar a sua produtividade 
+            com conforto e excelência.
+          </h4>
         </div>
       </div>
 
+
+
+
+
+
+
+
+
+
+
       <div class="sobre-conteudo-section">
-        <div class="container">
-          <h2>Trabalhe conosco!</h2>
+        <div class="info-wrapper">
+          <h2>Quem somos</h2>
+            <div class="row sobre-equipe-grid">
+              <div class="col-md-3 sobre-equipe-card">
+                <img src="https://github.com/danielbrazrocha.png" class="about-profile-pic img-fluid"
+                alt="Daniel Rocha" />
+                <a href="https://github.com/danielbrazrocha">
+                  <h4 class="sobre-link-equipe">Daniel Rocha</h4>
+                </a>
+                <p>Desenvolvedor FullStack</p>
+              </div>
+              
+              <div class="col-md-3 sobre-equipe-card">
+                <img src="https://github.com/rafarano.png" class="about-profile-pic img-fluid" alt="Rafael Alves" />
+                <a href="https://github.com/rafarano">
+                  <h4 class="sobre-link-equipe">Rafael Alves</h4>
+                </a>
+                <p>Desenvolvedor FullStack</p>
+              </div>
+              <div class="col-md-3 sobre-equipe-card">
+                <img src="https://github.com/iAmRapha.png" class="about-profile-pic img-fluid" alt="Raphael Gonçalves" />
+                <a href="https://github.com/iAmRapha">
+                  <h4 class="sobre-link-equipe">Raphael Gonçalves</h4>
+                </a>
+                <p>Desenvolvedor FullStack</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+      <div class="sobre-conteudo-section">
+        <div class="info-wrapper">
+          <h2>Trabalhe conosco</h2>
           <div class="items">
             <article>
               <div class="thumb"></div>
-              <h4 class="mb-0">Nosso projeto é opensource e está aberto a contribuições. </h4>
+              <h4 class=" text-info-externas mb-0">Nossa empresa está com posições em aberto! </h4>
+              <a href="/contato">
+                <h4 class="text-info-externas">Entre em contato</h4>
+                
+
+              </a>
             </article>
           </div>
         </div>
@@ -119,4 +106,4 @@
     </section>
   </main>
 
-  <%- include('./partials/footer') %>a
+  <%- include('./partials/footer') %>
