corrigindo pequenas alteracoes de CSS

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,14 +1,14 @@
 <footer class="py-5 bg-black text-light">
-    <div class="row">
-      <div class="col-4 offset-1">
+    <div class="row footer-wrapper">
+      <div class="col">
         <img src="https://fakeimg.pl/30x24/?retina=1&text=Logo" alt="" width="60" height="40" class="d-inline-block align-text-top">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
       </div>
 
 
 
-      <div class="col-2">
-        <ul class="nav flex-column">
+      <div class="col">
+        <ul class="nav footer-links">
           <li class="nav-item mb-2"><a href="/sobre" class="nav-link p-0 text-reset">Sobre</a></li>
           <li class="nav-item mb-2"><a href="/contato" class="nav-link p-0 text-reset">Contato</a></li>
           <li class="nav-item mb-2"><a href="/login" class="nav-link p-0 text-reset">Login</a></li>
@@ -16,8 +16,9 @@
         </ul>
       </div>
 
-      <div class="col-2">
-        <h5>Contato</h5>
+
+      <div class="col">
+        
         <p>
             Av. Paulista, 1234 - São Paulo - SP           
         </p>
