--- a/src/views/sobre.ejs
+++ b/src/views/sobre.ejs
@@ -92,11 +92,9 @@
           <div class="items">
             <article>
               <div class="thumb"></div>
-              <h4 class=" text-info-externas mb-0">Nossa empresa está com posições em aberto! </h4>
-              <a href="/contato">
-                <h4 class="text-info-externas">Entre em contato</h4>
-                
-
+              <h4 class="text-info-externas mb-0">Nossa empresa está com posições em aberto! </h4>
+              <a class="text-info-externas" href="/contato">
+                  Entre em contato
               </a>
             </article>
           </div>
