--- a/public/css/sobre.css
+++ b/public/css/sobre.css
@@ -18,7 +18,16 @@
 }
 
 .sobre-equipe-card a {
-  text-decoration: none;
+  text-decoration: none;  
+}
+
+/* a:hover {
+  color: var(--first-color) !important;
+  background-color: red;
+} */
+
+.sobre-equipe-card p {
+  color: black;
 }
 
 .about-profile-pic {
@@ -40,7 +49,21 @@
   font-weight: 300;
   text-align: justify;
   font-family: 'Roboto', sans-serif;
+  font-size: calc(1.275rem + .3vw);
+  
 }
+.text-info-externas > p {
+  color: var(--title-color);
+}
+
+a {
+  color: var(--title-color);
+  
+}
+a:hover {
+  color: var(--first-color) !important;
+}
+
 .section-about-title{
   color: var(--first-color);
   text-align: center;
