--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
   --header-height: 3.5rem;
 
   /*========== Colors ==========*/
-  --first-color: #b748e7;
+  --first-color: #9c44dc;
   --button-color: hsl(0, 0%, 17%);
   --button-color-alt: hsl(0, 0%, 21%);
   --title-color: hsl(0, 0%, 15%);
@@ -93,6 +93,10 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+a:hover {
+  color: var(--first-color) !important;
 }
 
 img {
@@ -217,6 +221,24 @@ body.dark-theme {
 .nav-link:hover{
     color: var(--first-color) !important;
 }
+.container-fluid{
+  flex-wrap: nowrap !important;
+
+}
+
+/* FOOTER */
+.footer-links{
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.row{
+  max-width: 100% !important;
+}
+.footer-wrapper{
+  margin: 0 0.25rem 0 0.25rem;
+}
   
 /* BOTOES */
 .button {
@@ -330,6 +352,7 @@ body.dark-theme {
     .products__img {
       height: 155px;
     }
+
   }
   
   @media screen and (min-width: 992px) {
@@ -346,4 +369,13 @@ body.dark-theme {
     }
     
 
+  }
+
+  @media (max-width: 992px) {
+    .footer-info{
+      text-align: center;
+    }
+    .lista-footer{
+      justify-content: center;
+    }
   }
