--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <footer class="py-5 bg-black text-light">
     <div class="row footer-wrapper">
       <div class="col">
-        <img src="https://fakeimg.pl/30x24/?retina=1&text=Logo" alt="" width="60" height="40" class="d-inline-block align-text-top">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        <img src="/assets/Icon.png" alt="" width="60" height="40" class="d-inline-block align-text-top">
+          <p>Acessórios para o seu home office</p>
       </div>
 
 
@@ -12,7 +12,7 @@
           <li class="nav-item mb-2"><a href="/sobre" class="nav-link p-0 text-reset">Sobre</a></li>
           <li class="nav-item mb-2"><a href="/contato" class="nav-link p-0 text-reset">Contato</a></li>
           <li class="nav-item mb-2"><a href="/login" class="nav-link p-0 text-reset">Login</a></li>
-          <li class="nav-item mb-2"><a href="/cadastro" class="nav-link p-0 text-reset">Cadastre-se</a></li>
+
         </ul>
       </div>
 
