--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-green">
       <div class="container-fluid ">
         <a class="navbar-brand" href="/">
-          <img src="https://fakeimg.pl/30x24/?retina=1&text=Logo" alt="" width="60" height="40"
+          <img src="/assets/Logo2.png" alt="" width="250" height="60"
             class="d-inline-block align-text-top">
         </a>
         
