Fotos e Descrições dos produtos, logo footer

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,7 +6,7 @@
             meuhomeoffice.com
         </h2>
 
-        <h4 class="section__subtitle">Os melhores produtos para seu home office, você encontra aqui</h4>
+        <h4 class="section__subtitle">Os melhores produtos para seu home office você encontra aqui:</h4>
 
         <div class="products__container grid">
 
