--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,7 +3,7 @@
     <main class="form-signin">
         <form>
             <div class="mt-2 d-flex justify-content-center">
-                <img  class="mb-4" src="https://fakeimg.pl/30x24/?retina=1&text=Logo" alt="" width="150" height="87" >
+                <img  class="mb-4" src="./assets/logo/icon.png" alt="" width="100" height="60" >
             </div>
 
           <h1 class="h3 mb-3 fw-normal">Faça seu login</h1>
