--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="py-5 bg-black text-light">
     <div class="row footer-wrapper">
       <div class="col">
-        <img src="/assets/Icon.png" alt="" width="60" height="40" class="d-inline-block align-text-top">
+        <img src="/assets/logo/logo.png" alt="" width="250" height="60" class="d-inline-block align-text-top">
           <p>Acessórios para o seu home office</p>
       </div>
 
