Acréscimo do botão cadastre-se na página de login

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -25,7 +25,10 @@
                 Esqueci minha senha
             </a>
           </div>
-          <button class="btn btn-primary background-color-1" type="submit">Logar</button>
+          <button class="btn btn-primary background-color" type="submit">Logar</button>
+          <!-- <button class="btn btn-primary background-color" type="submit" id="cadastrese" > -->
+             <a href="/cadastro">Cadastre-se</a> 
+          <!--</button> -->
           <p class="mt-5 mb-3 text-muted text-center">MeuHomeOffice &copy; 2021</p>
         </form>
       
