--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,40 +1,34 @@
 <%- include('./partials/header') %>
 
 <main class="container">
-    <section class="products section container" id="products">
-        <h2 class="section__title">
-            meuhomeoffice.com
-        </h2>
+  <div class="index-wrapper">
+    <section class="products section" id="products">
+      <h2 class="section__title">
+        Os melhores produtos para seu home office você encontra aqui:
+      </h2>
 
-        <h4 class="section__subtitle">Os melhores produtos para seu home office você encontra aqui:</h4>
+      <div class="products__container">
+        <% produtos.forEach(produto => { %>
 
-        <div class="products__container grid">
+        <article class="products__card">
+          <a href="/produto/<%= produto.id %>">
+            <div>
+              <img src="<%= produto.image %>" alt="" class="products__img" />
 
-            <% produtos.forEach(produto => { %>  
+              <h3 class="products__title"><%= produto.title %></h3>
+              <span class="products__price"><%= produto.price %></span>
 
-                <article class="products__card">
-                    <a href="/produto/<%= produto.id %>">
-                        <div>
+              <button class="products__button">
+                <i class="bx bx-shopping-bag"></i>
+              </button>
+            </div>
+          </a>
+        </article>
 
-                            <img src="<%= produto.image %>" alt="" class="products__img">
-                            
-                            <h3 class="products__title"><%= produto.title %></h3>
-                            <span class="products__price"><%= produto.price %></span>
-                            
-                            <button class="products__button">                                
-                                <i class='bx bx-shopping-bag'></i>
-                            </button>
-                        </div>
-                    </a>
-                </article>
-
-            <% }) %>
-
-            
-        </div>
-    </section>        
-  
+        <% }) %>
+      </div>
+    </section>
+  </div>
 </main>
-
 
 <%- include('./partials/footer') %>
