Inclusão do mapa do google maps na página contato

--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -12,10 +12,10 @@
             <div>
                 <div class="text">
                     <h3>Fale Conosco</h3>
-                    <p>Nessa página de contato estão disponíveis formulários para envio 
+                    <p>Nessa página de contato estão disponíveis formulários para envio
                         de sugestões, críticas, elogios e as perguntas frequentes. Caso
-                        não consiga encontrar o que procurar, por favor preencha o 
-                        formulário no final da página que entraremos em contato  para
+                        não consiga encontrar o que procurar, por favor preencha o
+                        formulário no final da página que entraremos em contato para
                         lhe auxiliar no for possível.
                     </p>
                 </div>
@@ -28,17 +28,24 @@
                     <article>
                         <h1>Meu Home Office</h1>
                         <p>
-                            Avenida Presidente Carlos, 1164 - Centro, São Paulo
+                            Rua Capote Valente, 36 - Pinheiros, São Paulo
                         </p>
                         <p>
                             Telefone: (11) 55351-4545
                             Telefone Fixo: (11) 55351-4545
                         </p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.2158085587475!2
+                        d-46.67527214997296!3d-23.560691467376298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
+                        1s0x94ce5781c850157f%3A0x936e30e6557ac603!2sR.%20Capote%20Valente%2C%2036%20-%20Pinheiros
+                        %2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005401-000!5e0!3m2!1spt-BR!2sbr!4v1643914261343!5m2!1
+                        spt-BR!2sbr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy">
+                        </iframe>
                         <p>
                             E-mail: atendimento@meuhomeoffice.com.br
                         </p>
                         <h3>Envio de formulário</h3>
-                        <form class="form-contato" action="https://formsubmit.co/faelalvesoliveira06@gmail.com" method="POST">
+                        <form class="form-contato" action="https://formsubmit.co/faelalvesoliveira06@gmail.com"
+                            method="POST">
                             <input type="hidden" name="_next" value="http://localhost:3000/envioform.ejs">
                             <input type="hidden" name="_cc" value="atendimento@meuhomeoffice.com" />
                             <input type="hidden" name="autoresponse" value="Recebemos sua mensagem, obrigado.
@@ -53,7 +60,7 @@
                     </article>
                     <article>
                         <div id="mapa"></div>
-                        <script>
+                        <!-- <script>
                             function inicializar() {
                                 var localizacao = { lat: -22.5415, lng: -47.12312 };
 
@@ -71,8 +78,7 @@
                         </script>
                         <script async defer
                             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDycTZaBY94bhGV5h7s3x-jIu7_n2fwTzw&callback=initMap">
-
-</script>
+                            </script> -->
                     </article>
                 </div>
             </div>
