--- a/src/views/cadastro.ejs
+++ b/src/views/cadastro.ejs
@@ -10,7 +10,7 @@
           <li>Senha precisa ter entre 6 e 12 caracteres</li>
         </ul>
       </div>
-      <div class="form">
+      <div class="form" action="/register" method="post" enctype="multipart/form-data">
         <form action="/" method="POST" class='formulario'>
           <label>Nome</label>
           <input type="text" class="nome validar">
