Resolvendo conflito de arquivos

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -20,7 +20,7 @@
       <div class="col">
         
         <p>
-            Av. Paulista, 1234 - São Paulo - SP           
+          Rua Capote Valente, 36 - Pinheiros, São Paulo           
         </p>
         <p>CEP 22555-555 </p>
       </div>
