--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -27,7 +27,7 @@
         </a>
         
         <form>
-          <input class="form-control" type="text" placeholder="busque aqui o seu produto" aria-label="Search">
+          <input class="form-control" type="text" placeholder="busque aqui seu produto" aria-label="Search">
         </form>
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
