--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -16,11 +16,14 @@
 }
 
 .form{
-  margin-left: 90px;
+  margin-left: 70px;
+  margin-right: 30px;
 }
 
-.form.input{
-  
+.form .input{
+  display: flex;
+  width: 100vh;
+  backgroundcolor: red;
 }
 
 .formulario{
@@ -37,5 +40,6 @@
 }
 
 .input{
+  width: 800px;
   box-shadow: 10 10 10 10px;
 }
