add MVC for Products, removing MockData

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,7 +18,7 @@
 
                             <img src="<%= produto.image %>" alt="" class="products__img">
                             
-                            <h3 class="products__title"><%= produto.title %></h3>
+                            <h3 class="products__title"><%= produto.name %></h3>
                             <span class="products__price"><%= produto.price %></span>
                             
                             <button class="products__button">                                
