--- a/src/views/produto.ejs
+++ b/src/views/produto.ejs
@@ -10,7 +10,7 @@
                 
 
                 <div class="home__data">
-                    <h1 class="home__title"><%= produto.title %></h1>
+                    <h1 class="home__title"><%= produto.name %></h1>
                     <p class="home__description">
                         <%= produto.description %>
                     </p>
