--- a/public/css/login.css
+++ b/public/css/login.css
@@ -47,3 +47,8 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.login-error-alert{
+  color: var(--first-color);
+  text-align: center;
+}
