--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -3,19 +3,23 @@
     <main class="form-signin">
       <section class="section">
          
-        <form>
+        <form method="POST" action="/login">
             <div class="mt-2 d-flex justify-content-center">
                 <img  class="mb-4" src="./assets/logo/icon.png" alt="" width="100" height="60" >
             </div>
 
           <h1 class="h3 mb-3 fw-normal">Faça seu login</h1>
+
+          <% if (typeof error != 'undefined') { %> 
+            <h4 class="h4 login-error-alert"><%= error %> </h4>
+          <% } %> 
       
           <div class="form-floating">
             <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Email</label>
           </div>
           <div class="form-floating">
-            <input type="password" name="senha" class="form-control" id="floatingPassword" placeholder="Password">
+            <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Senha</label>
           </div>
       
