--- a/src/views/cadastro.ejs
+++ b/src/views/cadastro.ejs
@@ -10,21 +10,34 @@
           <li>Senha precisa ter entre 6 e 12 caracteres</li>
         </ul>
       </div>
-      <div class="form" action="/register" method="post" enctype="multipart/form-data">
-        <form action="/" method="POST" class='formulario'>
+      <div class="form">
+        <form action="/cadastro" method="POST" class='formulario'>
           <label>Nome</label>
           <input type="text" name="nome" class="nome validar">
-          <label>Sobrenome</label>
-          <input type="text" name="sobrenome" class="sobrenome validar">
           <label>CPF</label>
-          <input type="text" name="cpf" class="cpf validar">
+          <input type="text" name="cpf" class="sobrenome validar">
+          <label>Telefone</label>
+          <input type="text" name="tel" class="cpf validar">
           <label>E-mail</label>
           <input type="email" name="email" class="email validar"> 
           <label>Senha</label>
           <input type="password" name="senha" class="senha validar">
           <label>Repetir Senha</label>
-          <input type="password" name="repete-senha" class="repetir-senha validar">
+          <input type="password" name="repeteSenha" class="repetir-senha validar">
           <button type="submit" class="botao">Enviar</button>
+
+          <!-- Visualização dos erros no backend -->
+          <% if (typeof error != 'undefined') { %> 
+            <h4 class="h5 register-error-alert"><%= error %> </h4>
+          <% } %> 
+
+          <!-- Visualização da mensagem de sucesso -->
+          <% if (typeof sucess != 'undefined') { %> 
+            <a href="/login">
+              <h4 class="h5 register-sucess-alert"><%= sucess %> </h4>
+            </a>
+          <% } %> 
+
         </form>
       </div>
 
