--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,8 +10,9 @@
 
           <h1 class="h3 mb-3 fw-normal">Faça seu login</h1>
 
+          <!-- Visualização da mensagem de erro -->
           <% if (typeof error != 'undefined') { %> 
-            <h4 class="h4 login-error-alert"><%= error %> </h4>
+            <h4 class="h4 search-error-alert"><%= error %> </h4>
           <% } %> 
       
           <div class="form-floating">
