--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -26,8 +26,8 @@
             class="d-inline-block align-text-top">
         </a>
         
-        <form>
-          <input class="input-header form-control" type="text" placeholder="busque aqui o seu produto" aria-label="Search">
+        <form method="POST" action="/busca">
+          <input class="input-header form-control" name="queryTxt" type="text" placeholder="busque aqui o seu produto" aria-label="Search">
         </form>
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
